Bug 80149 - JNLP Support